--- a/src/AllPlantsPage.css
+++ b/src/AllPlantsPage.css
@@ -2,3 +2,16 @@ body {
     display: flex;
     justify-content: space-around;
 }
+
+.zoom-img {
+    display: block;
+    overflow: hidden;
+  }
+  
+  .zoom-img img {
+    transition: transform 0.3s ease;
+  }
+  
+  .zoom-img:hover img {
+    transform: scale(1.1);
+  }
