homepage styling done

--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,13 @@ a {
 body {
     margin: 0;
 }
+
+.navbar-collapse {
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 1s ease-in-out; /* Adding transition */
+  }
+  
+  .navbar-collapse.expanded {
+    max-height: 200px; /* Set the height you want when expanded */
+  }
