--- a/src/HomePage.css
+++ b/src/HomePage.css
@@ -1,3 +1,51 @@
-.no-underline {
-    text-decoration: "none";
+.first-h1 {
+    animation: animateLeft 1.5s;
+}
+.second-h1{
+    animation: animateRight 1.5s;
+}
+
+@media (max-width: 786px) {
+    .col-lg-7 > div h1 {
+        font-size: 3rem !important;
+        text-align: center;
+        animation: animateLeft 1s;
+    }
+    .bg-img {
+        background-size: contain;
+    }
+    .col-lg-7 > div{
+        width: 100%;
+        margin-bottom: 1rem;
+        margin: auto;
+        bottom: 100
+    }
+}
+
+@media (max-width: 992px) {
+    .col-lg-7 > div h1 {
+        font-size: 3rem !important;
+    }
+}
+
+@keyframes animateLeft {
+    from {
+        opacity: 0;
+        transform: translateX(-300px);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+@keyframes animateRight {
+    from {
+        opacity: 0;
+        transform: translateX(300px);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
 }
