--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,9 @@
 .recent-card:hover {
     transform: scale(1.2);
 }
+
+@media (max-width: 768px) {
+    .filter-btn {
+        width: 200px
+    }
+}
